--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>はじめまして。私の作成するGitHubへようこそ。</p>
     <p>情報の更新ができていますか？</p>
     <p>私は今、ウェブデザインの講義内容を練習しています。</p>
+    <p>今から課題をやります。</p>
 </body>
 </html>
