--- a/index.html
+++ b/index.html
@@ -11,5 +11,35 @@
     <p>情報の更新ができていますか？</p>
     <p>私は今、ウェブデザインの講義内容を練習しています。</p>
     <p>今から課題をやります。</p>
+    <header>
+        <h1>マテリアルスイーツ</h1>
+        <p>伝統と素材にこだわった季節のフルーツを使用したお店です。</p>
+        <img src="images/header.jpg" alt="金のモンブランヘッダー画像">
+        <nav>
+            <ul>
+                <li><a href="#">モンブラン</a></li>
+                <li><a href="#">マカロン</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <article>
+            <h2>ピックアップスイーツ</h2>
+            <p>今月のお勧めのスイーツを２つ紹介します。</p>
+            <section class = "sweets">
+                <h3>モンブラン</h3>
+                <p>今年採れた国内産の栗を使用したケーキです。</p>
+                <img src="images/blanc2.jpg" alt="モンブランの写真">
+            </section>
+            <section class = "sweets">
+                <h3>マカロン</h3>
+                <p>沖縄産の砂糖を使用したケーキです。</p>
+                <img src="images/macron2.jpg" alt="マカロンの写真">
+            </section>
+        </article>
+    </main>
+    <footer>
+        <small>&copy; 2018 Material Sweets.</small>
+    </footer>
 </body>
 </html>
