--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@
     <main>
         <article>
             <section class = "sweets">
-                <h3>モンブラン</h3>
-                <p>今年採れた国内産の栗を使用したケーキです。</p>
                 <img src="images/blanc2.jpg" alt="モンブランの写真">
+                <h3>メニュー</h3>
             </section>
             </article>
     </main>
