--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <article>
             <section class = "sweets">
                 <img src="images/blanc2.jpg" alt="モンブランの写真">
-                <h3>メニュー</h3>
+                <h3>メニュー１</h3>
             </section>
             </article>
     </main>
