--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
             <section class = "sweets">
                 <img src="images/blanc2.jpg" alt="モンブランの写真">
                 <h3>メニュー１</h3>
+                <p>このメニューは、このよう<br>
+                    な材料を使用しています。<br>
+                    ゆえに、いつまでも美味し<br>
+                    い状態を保っています。是<br>
+                    非、いかがでしょうか。
+                </p>
             </section>
             </article>
     </main>
