--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
        /*メインコンテンツ　CSS*/
         main{
-            width:400px;
+            width: 800px;
             padding-top:10px;
             padding-bottom:10px;
             padding-left:20px;
@@ -36,7 +36,7 @@
     <p>今から課題をやります。</p>
     <main>
         <article>
-            <section class = "sweets">
+            <section>
                 <img src="images/blanc2.jpg" alt="モンブランの写真">
                 <h3>メニュー１</h3>
                 <p>このメニューは、このよう<br>
