--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     な材料を使用しています。<br>
                     ゆえに、いつまでも美味し<br>
                     い状態を保っています。是<br>
-                    非、いかがでしょうか。
+                    非、いかがでしょうか
                 </p>
             </section>
             </article>
